--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -30,11 +30,17 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZQW-vD-GYx" userLabel="CellImage">
                                                     <rect key="frame" x="16" y="4" width="361" height="225"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UZ-k8-nv9" userLabel="LikeButton">
-                                                    <rect key="frame" x="309" y="4" width="68" height="58"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="like_active"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UZ-k8-nv9" userLabel="LikeButton">
+                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="like_active"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="26 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SlY-GW-OEm" userLabel="DateLabel">
                                                     <rect key="frame" x="23.999999999999993" y="205" width="102.33333333333331" height="16"/>
@@ -46,6 +52,7 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="ZQW-vD-GYx" secondAttribute="trailing" constant="16" id="2xs-8l-vwk"/>
+                                                <constraint firstItem="8UZ-k8-nv9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZQW-vD-GYx" secondAttribute="leading" constant="293" id="Ore-Vs-q6c"/>
                                                 <constraint firstItem="SlY-GW-OEm" firstAttribute="leading" secondItem="ZQW-vD-GYx" secondAttribute="leading" constant="8" id="PoQ-T0-udC"/>
                                                 <constraint firstItem="ZQW-vD-GYx" firstAttribute="bottom" secondItem="SlY-GW-OEm" secondAttribute="bottom" constant="8" id="SaY-ZM-6Lr"/>
                                                 <constraint firstItem="ZQW-vD-GYx" firstAttribute="trailing" secondItem="8UZ-k8-nv9" secondAttribute="trailing" id="Uwy-0E-8V2"/>
@@ -57,6 +64,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="cellImage" destination="ZQW-vD-GYx" id="jYQ-EW-7Ug"/>
+                                            <outlet property="dateLabel" destination="SlY-GW-OEm" id="iIO-Lw-Ua9"/>
+                                            <outlet property="likeButton" destination="8UZ-k8-nv9" id="HR2-i0-UVW"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
