--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aDS-T7-xHY">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -94,9 +95,77 @@
             </objects>
             <point key="canvasLocation" x="9.9236641221374047" y="-34.507042253521128"/>
         </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="Kjw-gx-S77">
+            <objects>
+                <viewController id="aDS-T7-xHY" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uge-oS-gV2">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="vuX-BC-QdN">
+                                <rect key="frame" x="16" y="91" width="64" height="70"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ub-4h-uEi">
+                                <rect key="frame" x="16.000000000000004" y="169" width="41.333333333333343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fmq-Qc-gqy">
+                                <rect key="frame" x="16.000000000000004" y="198" width="41.333333333333343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8RK-cT-VBH">
+                                <rect key="frame" x="16.000000000000004" y="227" width="41.333333333333343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bh3-Aq-A1y" userLabel="exitButton">
+                                <rect key="frame" x="325" y="115" width="68" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="XxP-fe-6S0"/>
+                                    <constraint firstAttribute="height" constant="22" id="gkQ-1P-Rww"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="exit_button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LHt-zW-nMb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fmq-Qc-gqy" firstAttribute="top" secondItem="5ub-4h-uEi" secondAttribute="bottom" constant="8" id="1Eu-W1-qMY"/>
+                            <constraint firstItem="bh3-Aq-A1y" firstAttribute="leading" secondItem="vuX-BC-QdN" secondAttribute="trailing" constant="245" id="7Cn-qI-yXc"/>
+                            <constraint firstItem="8RK-cT-VBH" firstAttribute="top" secondItem="Fmq-Qc-gqy" secondAttribute="bottom" constant="8" id="9YJ-Hd-THj"/>
+                            <constraint firstAttribute="trailing" secondItem="bh3-Aq-A1y" secondAttribute="trailing" id="LbC-Jn-wPs"/>
+                            <constraint firstItem="bh3-Aq-A1y" firstAttribute="top" secondItem="LHt-zW-nMb" secondAttribute="top" constant="56" id="Xag-Vf-jJg"/>
+                            <constraint firstItem="vuX-BC-QdN" firstAttribute="leading" secondItem="Uge-oS-gV2" secondAttribute="leading" constant="16" id="bD6-RK-gwH"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5ub-4h-uEi" secondAttribute="trailing" constant="8" id="dTN-Jb-hPM"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fmq-Qc-gqy" secondAttribute="trailing" constant="8" id="jij-9K-d5x"/>
+                            <constraint firstItem="8RK-cT-VBH" firstAttribute="leading" secondItem="Uge-oS-gV2" secondAttribute="leading" constant="16" id="lVh-Qs-jId"/>
+                            <constraint firstItem="5ub-4h-uEi" firstAttribute="top" secondItem="vuX-BC-QdN" secondAttribute="bottom" constant="8" id="lvh-p2-6Kj"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8RK-cT-VBH" secondAttribute="trailing" constant="8" id="m1X-aF-kvJ"/>
+                            <constraint firstItem="vuX-BC-QdN" firstAttribute="top" secondItem="LHt-zW-nMb" secondAttribute="top" constant="32" id="mmA-Hk-hMc"/>
+                            <constraint firstItem="5ub-4h-uEi" firstAttribute="leading" secondItem="Uge-oS-gV2" secondAttribute="leading" constant="16" id="uje-vm-pr1"/>
+                            <constraint firstItem="Fmq-Qc-gqy" firstAttribute="leading" secondItem="Uge-oS-gV2" secondAttribute="leading" constant="16" id="uq9-vX-5n6"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="txQ-m5-7Z2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="852.67175572519079" y="-35.211267605633807"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
+        <image name="avatar" width="70" height="70"/>
+        <image name="exit_button" width="44" height="44"/>
         <image name="like_active" width="44" height="44"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
